initial vue integration

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<p>Testing</p>
+<html>
+    <head>
+        <title>Portfolio Website</title>
+    </head>
+    <body>
+        <div id='app'>
+            <h1>{{ message }}</h1>
+        </div>
+        <script src='bundle.js'></script>       
+    </body>
+</html>
