--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <div id='app' v-cloak>
             <nav class='navbar'>
                 <div class='navbar-brand'>
-                    <span class='navbar-item'>Test</span>
+                    <span class='navbar-item'>Ciarán Deegan</span>
                     <div class='navbar-burger' data-target='navMenu'>
                         <span></span>
                         <span></span>
@@ -19,7 +19,6 @@
                     <router-link class='navbar-item' active-class='is-active' to='projects'>Projects</router-link>
                 </div>
             </nav>
-
             <div class='container'>
                 <router-view></router-view>
             </div>
