--- a/public/index.html
+++ b/public/index.html
@@ -2,49 +2,51 @@
     <head>
         <title>Portfolio Website</title>
         <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css'>
-        <link rel='stylesheet' type='text/css' href='https://jenil.github.io/bulmaswatch/lumen/bulmaswatch.min.css'>
+        <link rel='stylesheet' type='text/css' href='https://jenil.github.io/bulmaswatch/journal/bulmaswatch.min.css'>
         <script defer src='https://use.fontawesome.com/releases/v5.0.6/js/all.js'></script>
     </head>
     <body>
         <div id='app' v-cloak>
-            <nav class='navbar'>
-                <div class='navbar-brand'>
-                    <span class='navbar-item'>Ciarán Deegan</span>
-                    <div class='navbar-burger' data-target='navMenu'>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <div class='navbar-menu' id='navMenu'>
-                    <router-link class='navbar-item' active-class='is-active' to='about'>About</router-link>
-                    <router-link class='navbar-item' active-class='is-active' to='projects'>Projects</router-link>
-                    <!-- Desktop Elements -->
-                    <div class='navbar-end'>
-                        <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
-                            <span class='icon'><i class='fas fa-download'></i></span> CV
-                        </a>
-                        <a class='navbar-item is-hidden-touch' target='_blank' href='https://www.github.com/CiaranDeegan' active-class='is-active'>
-                            <span class='icon'><i class='fab fa-github'></i></span>
-                        </a>
-                        <a class='navbar-item is-hidden-touch' target='_blank' href='https://www.linkedin.com/in/CiaranDeegan' active-class='is-active'>
-                            <span class='icon has-text-info'><i class='fab fa-linkedin'></i></span>
-                        </a>
-
-                        <div class='navbar-item has-dropdown is-hoverable'>
-                            <a class='navbar-link is-hidden-touch'>Contact</a>
-                            <div class='navbar-dropdown is-right'>
-                                <a class='navbar-item is-hidden-touch' target='_blank' href='mailto:ciaran@cdeegan.xyz' active-class='is-active'>
-                                    ciaran@cdeegan.xyz
-                                </a>
-                                <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
-                                    401-441-4912
-                                </a>
-                            </div>
+            <nav class='navbar' style='z-index: 1000'>
+                <div class='container'>
+                    <div class='navbar-brand'>
+                        <span class='navbar-item'>Ciarán Deegan</span>
+                        <div class='navbar-burger' data-target='navMenu'>
+                            <span></span>
+                            <span></span>
+                            <span></span>
                         </div>
                     </div>
-                    <!-- Mobile Elements -->
-                    <a class='navbar-item is-hidden-desktop' href='#' active-class='is-active'>Contact</a>
+                    <div class='navbar-menu' id='navMenu'>
+                        <router-link class='navbar-item' active-class='is-active' to='about'>About</router-link>
+                        <router-link class='navbar-item' active-class='is-active' to='projects'>Projects</router-link>
+                        <!-- Desktop Elements -->
+                        <div class='navbar-end'>
+                            <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
+                                <span class='icon'><i class='fas fa-download'></i></span> CV
+                            </a>
+                            <a class='navbar-item is-hidden-touch' target='_blank' href='https://www.github.com/CiaranDeegan' active-class='is-active'>
+                                <span class='icon'><i class='fab fa-github'></i></span>
+                            </a>
+                            <a class='navbar-item is-hidden-touch' target='_blank' href='https://www.linkedin.com/in/CiaranDeegan' active-class='is-active'>
+                                <span class='icon has-text-info'><i class='fab fa-linkedin'></i></span>
+                            </a>
+
+                            <div class='navbar-item has-dropdown is-hoverable'>
+                                <div class='navbar-link is-hidden-touch' style='cursor: pointer'>Contact</div>
+                                <div class='navbar-dropdown is-right'>
+                                    <a class='navbar-item is-hidden-touch' target='_blank' href='mailto:ciaran@cdeegan.xyz' active-class='is-active'>
+                                        ciaran@cdeegan.xyz
+                                    </a>
+                                    <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
+                                        401-441-4912
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Mobile Elements -->
+                        <a class='navbar-item is-hidden-desktop' href='#' active-class='is-active'>Contact</a>
+                    </div>
                 </div>
             </nav>
             <div class='container'>
