--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Portfolio Website</title>
         <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css'>
-        <link rel='stylesheet' type='text/css' href='https://jenil.github.io/bulmaswatch/journal/bulmaswatch.min.css'>
+        <link rel='stylesheet' type='text/css' href='css/bulma.timeline.css'>
         <script defer src='https://use.fontawesome.com/releases/v5.0.6/js/all.js'></script>
     </head>
     <body>
@@ -39,7 +39,7 @@
                                         ciaran@cdeegan.xyz
                                     </a>
                                     <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
-                                        401-441-4912
+                                        (+1) 647-473-4401
                                     </a>
                                 </div>
                             </div>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </nav>
-            <div class='container'>
+            <div class='container' style='margin-top: 10px;'>
                 <router-view></router-view>
             </div>
         </div>
