added tel: link

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                                     <a class='navbar-item is-hidden-touch' target='_blank' href='mailto:ciaran@cdeegan.xyz' active-class='is-active'>
                                         ciaran@cdeegan.xyz
                                     </a>
-                                    <a class='navbar-item is-hidden-touch' href='#' active-class='is-active'>
+                                    <a class='navbar-item is-hidden-touch' href='tel:647-473-4401' active-class='is-active'>
                                         (+1) 647-473-4401
                                     </a>
                                 </div>
