--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Portfolio Website</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css'>
         <link rel='stylesheet' type='text/css' href='css/bulma.timeline.css'>
         <script defer src='https://use.fontawesome.com/releases/v5.0.6/js/all.js'></script>
