modified navbar to be fixed to top of page

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class='has-navbar-fixed-top'>
     <head>
         <title>Portfolio Website</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id='app' v-cloak>
-            <nav class='navbar' style='z-index: 1000'>
+            <nav class='navbar is-fixed-top' style='z-index: 1000'>
                 <div class='container'>
                     <div class='navbar-brand'>
                         <span class='navbar-item'>Ciarán Deegan</span>
