video player modal implementation

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
                 <router-view></router-view>
             </div>
         </div>
+        <script src='js/video.player.js'></script>    
         <script src='js/nav.js'></script>    
         <script src='js/bundle.js'></script>    
     </body>
