--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,15 @@
         </div>
         <script src='js/video.player.js'></script>    
         <script src='js/nav.js'></script>    
-        <script src='js/bundle.js'></script>    
+        <script src='js/bundle.js'></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104085225-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-104085225-1');
+        </script>
     </body>
 </html>
