added meta description

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html class='has-navbar-fixed-top'>
     <head>
         <title>Ciarán Deegan</title>
+        <meta name='description' content='Ciarán Deegan&#39;s software development portfolio, featuring live demos and video walkthroughs.'>
         <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
         <link rel='shortcut icon' href='img/favicon.png' />
         <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css'>
